--- a/resources/assets/css/layout.css
+++ b/resources/assets/css/layout.css
@@ -1,6 +1,9 @@
-body {
-    background-color: #0888AB;
+body, div {
+    /*background-color: #0888AB;*/
     color:#FFFFFF;
+    margin: 0;
+    border: 0 none;
+    padding: 0;
 }
 
 @font-face {
@@ -9,18 +12,34 @@ body {
     url('../fonts/patronweb-bold-webfont.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
-.container {
-    max-width: 80rem;
-    display:inline-block;
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
+    font-family: "Patron Bold";
+    font-weight: normal;
+    color: #FFFFFF;
 }
 
 /* Masthead for nav */
-.blog-masthead {
-    padding-top:2rem;
-    background-color:transparent;
+.masthead {
     font-size:18px;
     text-align: center;
     font-family:"Patron Bold";
+    left: 0;
+    width: 100%;
+    height: 6vh;
+    padding-top:3rem;
+    position: absolute;
+    z-index: 10;
+}
+
+/* Container inside the Masthead */
+.container {
+    max-width: 80rem;
+    display:inline-block;
 }
 
 /* Nav-links */
@@ -28,10 +47,33 @@ body {
     margin-left:5rem;
     margin-right:5rem;
     text-decoration: none;
-    color: #f0f0f0;
+    color:#FFFFFF;
 }
 
 .nav-link:hover,
 .nav-link:focus {
-    color:#FFFFFF;
+    color: #dedede;
+}
+
+/* Image on the master page */
+.master-bg {
+    font-family:"Patron Bold";
+    background: url("../../background.jpg") no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 85vh;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+}
+
+/* Text on the image */
+h1 {
+    vertical-align: middle;
+    line-height: 60vh;
+    text-transform: uppercase;
+    text-align: center;
+    font-size:92px;
 }
