--- a/resources/assets/css/layout.css
+++ b/resources/assets/css/layout.css
@@ -15,13 +15,14 @@ h1  {
     font-family: "Patron Bold";
     font-weight: normal;
     color: #FFFFFF;
+    margin-top:-10px;
 }
 
 h2 {
     font-family:Ubuntu;
     font-weight:700;
     font-size:15px;
-    margin-bottom:10px;
+    margin-bottom:-10px;
 }
 
 /* Nav */
@@ -57,7 +58,7 @@ h2 {
 /* Image on the master page */
 .hero {
     font-family:"Patron Bold";
-    background: url("../../background.jpg") no-repeat center center;
+    background: url("../../../public/images/background.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -72,10 +73,10 @@ h2 {
 /* Text on the image */
 .hero-title {
     vertical-align: middle;
-    line-height: 50vh;
+    line-height: 70vh;
     text-transform: uppercase;
     text-align: center;
-    font-size:82px;
+    font-size:84px;
 }
 
 /* The three div's on the master page */
@@ -93,21 +94,61 @@ h2 {
 }
 
 .features-item {
-    background-color: #0888AB;
+    background-color: #FFFFFF;
     width: 250px;
     height:250px;
     margin:30px;
-    padding:15px;
     display:inline-block;
+    overflow: hidden;
     -webkit-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.26);
     -moz-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.26);
 }
 
+.features-item:hover {
+    background-color: #0888AB;
+    color:#FFFFFF;
+}
+
+/* The .svg icon in the (one of the three) divs on the master page */
+.feature1 {
+    position: absolute;
+    display: block;
+    margin-top: 70px;
+    margin-left:90px;
+}
+
+/* Icon 1 paper and pencil */
+#feature_icon {
+    fill: #333333;
+}
+
+/* Icon 1 rectangle border */
+#feature_icon2 {
+    fill:none;
+    stroke:#333333;
+    stroke-miterlimit:10;
+    stroke-width:4px;
+}
+
 .text {
-    padding-top:160px;
-    font-size:18px;
+    padding-top:200px;
+    padding-bottom:37px;
+    font-size:16px;
     text-align: center;
     text-transform: uppercase;
+    color:#333333;
+}
+
+#feature_icon:hover {
+    fill:#FFFFFF;
+}
+
+#feature_icon2:hover {
+    stroke: #FFFFFF;
+}
+
+.text:hover {
+    color:#FFFFFF;
 }
 
 /* Portfolio */
@@ -124,7 +165,7 @@ h2 {
     list-style-type: none;
     display: flex; /* portfolio-group-left and portfolio-group-right next to each other horizontally */
     height:250px;
-    width:970px;
+    width:880px;
     margin:0 auto;
 }
 
@@ -146,4 +187,3 @@ h2 {
 .portfolio-text {
     font-weight:300;
 }
-
