--- a/resources/assets/css/layout.less
+++ b/resources/assets/css/layout.less
@@ -1,5 +1,37 @@
+// variables
+@colorblue: #0888AB;
+@colorwhite: #FFFFFF;;
+@colordarkgrey:#333333;;
+// end variables
+
+// mixins
+.displayflex(@value: flex){
+  webkit-display: @value;
+  display: @value;
+}
+
+.background-size(@value){
+  -webkit-background-size: @value;
+  -moz-background-size: @value;
+  -o-background-size: @value;
+  background-size: @value;
+}
+
+.textmiddle(){
+  .displayflex(); /* Text vertical middle */
+  justify-content: center; /* Text vertical middle */
+  flex-direction: column; /* Text vertical middle */
+}
+
+.square(@value){
+  width: @value;
+  height: @value;
+}
+// end mixins
+
+
 body, div {
-  color:#FFFFFF;
+  color:@colorwhite;
   margin: 0;
   border: 0 none;
   padding: 0;
@@ -14,7 +46,7 @@ body, div {
 h1  {
   font-family: "Patron Bold";
   font-weight: normal;
-  color: #FFFFFF;
+  color: @colorwhite;
   margin-top:-10px;
 }
 
@@ -24,6 +56,20 @@ h2 {
   font-size:15px;
   margin-bottom:-10px;
 }
+
+
+// default styling
+.fill {
+  fill: @colordarkgrey;
+}
+
+.stroke {
+  fill:none;
+  stroke:@colordarkgrey;
+  stroke-miterlimit:10;
+  stroke-width:4px;
+}
+// end default styling
 
 /* Nav */
 .nav-container {
@@ -47,28 +93,26 @@ h2 {
   margin-left:5rem;
   margin-right:5rem;
   text-decoration: none;
-  color:#FFFFFF;
-}
+  color:@colorwhite;
 
-.nav-link:hover,
-.nav-link:focus {
-  color: #dedede;
+  &:hover, &:focus {
+    color:#dedede;
+  }
 }
+// end nav
 
 /* Image on the master page */
 .hero {
   font-family:"Patron Bold";
   background: url("../../../public/images/background.jpg") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  .background-size(cover);
   height:600px;
   width:100%;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
 }
+//  image on master page
 
 /* Text on the image */
 .hero-title {
@@ -78,6 +122,7 @@ h2 {
   text-align: center;
   font-size:84px;
 }
+//  text on the image
 
 /* The three div's on the master page */
 .features {
@@ -89,25 +134,36 @@ h2 {
 }
 
 .features-group{
-  text-align: center;
   margin: 0 auto;
 }
 
 .features-item {
-  background-color: #FFFFFF;
-  width: 250px;
-  height:250px;
+  background-color: @colorwhite;
+  .square(250px);
   margin:30px;
   display:inline-block;
   overflow: hidden;
   -webkit-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.26);
   -moz-box-shadow: 0px 0px 31px 0px rgba(0,0,0,0.26);
-}
 
-.features-item:hover {
-  background-color: #0888AB;
-  color:#FFFFFF;
+  &:hover {
+    background-color: @colorblue;
+
+    .fill {
+      fill:@colorwhite;
+    }
+
+    .stroke {
+      stroke: @colorwhite;
+    }
+
+    .title{
+      color: @colorwhite;
+    }
+  }
 }
+//  end of the three divs's on master page
+
 
 /* The .svg icon in the (one of the three) divs on the master page */
 .feature1 {
@@ -117,38 +173,13 @@ h2 {
   margin-left:90px;
 }
 
-/* Icon 1 paper and pencil */
-#feature_icon {
-  fill: #333333;
-}
-
-/* Icon 1 rectangle border */
-#feature_icon2 {
-  fill:none;
-  stroke:#333333;
-  stroke-miterlimit:10;
-  stroke-width:4px;
-}
-
-.text {
+.title {
   padding-top:200px;
   padding-bottom:37px;
   font-size:16px;
   text-align: center;
   text-transform: uppercase;
-  color:#333333;
-}
-
-#feature_icon:hover {
-  fill:#FFFFFF;
-}
-
-#feature_icon2:hover {
-  stroke: #FFFFFF;
-}
-
-.text:hover {
-  color:#FFFFFF;
+  color:@colordarkgrey;
 }
 
 /* Portfolio */
@@ -156,34 +187,30 @@ h2 {
   font-family:Ubuntu;
   font-size:14px;
   line-height:24px;
-  background-color: #0888AB;
+  background-color: @colorblue;
   margin-top:40px;
   width:100%;
 }
 
-.portfolio-group {
+.portfolio-content{
   list-style-type: none;
-  display: flex; /* portfolio-group-left and portfolio-group-right next to each other horizontally */
+  display: flex;
   height:250px;
   width:880px;
   margin:0 auto;
-}
-
-.portfolio-group-left {
-  display: flex; /* Text vertical middle */
-  justify-content: center; /* Text vertical middle */
-  flex-direction: column; /* Text vertical middle */
-  width:240px;
-}
-
-.portfolio-group-right {
-  display: flex; /* Text vertical middle */
-  justify-content: center; /* Text vertical middle */
-  flex-direction: column; /* Text vertical middle */
-  width:400px;
-  flex:1;
-}
-
-.portfolio-text {
   font-weight:300;
+
+  .image, .text{
+    .textmiddle();
+  }
+
+  .image{
+    width:240px;
+  }
+
+  .text{
+    width:400px;
+    flex:1;
+  }
 }
+// end portfolio
